@@ -97,9 +97,9 @@ ldap_back_dn_massage(
 
 	assert( res );
 
+	res->bv_val = NULL;
+	res->bv_len = 0;
 	if ( dn == NULL ) {
-		res->bv_val = NULL;
-		res->bv_len = 0;
 		return 0;
 	}
 	if ( dc->rwmap == NULL || dc->rwmap->rwm_suffix_massage == NULL ) {
@@ -135,7 +135,7 @@ ldap_back_dn_massage(
 			/* At a DN Separator */
 		}
 
-		if ( !strcmp( dc->rwmap->rwm_suffix_massage[i+src].bv_val, &dn->bv_val[diff] ) ) {
+		if ( !strcasecmp( dc->rwmap->rwm_suffix_massage[i+src].bv_val, &dn->bv_val[diff] ) ) {
 			res->bv_len = diff + dc->rwmap->rwm_suffix_massage[i+dst].bv_len;
 			res->bv_val = ch_malloc( res->bv_len + 1 );
 			strncpy( res->bv_val, dn->bv_val, diff );
